# care-coordinator-app

./: .dockerignore  .gitignore  Dockerfile  render.yaml  start.sh
backend/: config.py  database.py  main.py  models.py  pyproject.toml  requirements-runtime.txt  requirements.txt  schemas.py
backend/agent/: orchestrator.py  prompts.py  tools.py
backend/rag/: ingest.py  retriever.py
backend/routers/: appointments.py  calendar.py  chat.py  conversations.py  users.py  wellbeing.py
backend/treatment/: calendar_builder.py  cycles.py
frontend/: package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/calendar/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/app/summary/: page.tsx
frontend/src/app/wellbeing/: page.tsx
frontend/src/components/calendar/: CycleLegend.tsx  TreatmentCalendar.tsx
frontend/src/components/chat/: ChatInput.tsx  ChatWindow.tsx  MessageBubble.tsx
frontend/src/components/layout/: Sidebar.tsx
frontend/src/components/wellbeing/: BurnoutScore.tsx  MoodChart.tsx
frontend/src/hooks/: useCalendar.ts  useChat.ts  useWellbeing.ts
frontend/src/lib/: api.ts
scripts/: ingest_pdfs.py  seed_demo.py
